platform/gitops/kustomize/security/opa-gatekeeper/templates/k8sreadonlyrootfs.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sreadonlyrootfs
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  annotations:
    description: >-
      Requires containers to set
      securityContext.readOnlyRootFilesystem: true to reduce
      the attack surface of running containers.
spec:
  crd:
    spec:
      names:
        kind: K8sReadOnlyRootFS
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sreadonlyrootfs

        violation[{"msg": msg}] {
          c := input_containers[_]
          not exempt(c)
          c.securityContext.readOnlyRootFilesystem != true
          msg := sprintf("Container '%v' must set securityContext.readOnlyRootFilesystem: true", [c.name])
        }

        exempt(c) {
          exempted := input.parameters.exemptImages[_]
          startswith(c.image, exempted)
        }

        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }
